<resources>
    <string name="app_name">Body Building</string>
    <string name="credit">Developed By: Vibhu Jain</string>
    <string name="appname">LETS BUILD IT</string>
    <string name="link_head">Github Link:</string>
    <string name="git_link">github.com/vibhujain-51</string>
    <string name="first_exe">Shoulder press using rod is good for shoulders and slow reps help in proper and rapid shredding of shoulder muscles.</string>
    <string name="second_exe">Crunches is a very simple yet best exercise if you want to have six pack abs. It does not need any sort of equipment just a man and consistency.</string>
    <string name="third_exe">Plank as recommended by experts is the best exercise if you want to loose belly fat and want to have a strong stomach muscles. This exercise is good for overall body.</string>
    <string name="forth_exe">Bench Press this exercise need some dedication and proper concentration with both of these you can achieve a solid chest. It also helps in the growth of biceps.</string>
    <string name="fifth_exe">The leg press though the machine seems a bit frightening but this exercise will strenghten your legs to the next level you will be able to see the leg muscles growth within one month of gyming.</string>
    <string name="sixth_exe">Barbell Curls the best exercise which you can consider for building solid biceps. Just increase the weights slowly and you can see the shreded biceps growth.</string>
    <string name="seventh_exe">Treadmill the universal exercise for weight loss just run on the machine and maintain the consistency for few weeks you can see the result of fat burning at an extra ordinary rate.</string>
    <string name="eighth_exe">Pull ups this exercise have various effects on the body it effects the way its done some people use it for height growth and some use it for building lats and biceps. Choice is yours do the way you want it to see the effects on your body.</string>
    <string name="ninth_exe">Shoulder press using dumbells in this exercise you can use light weight dumbells to increse the muscles growth rapidly.</string>
    <string name="tenth_exe">Lunges this exercise have impact on the lower portion of the body we can grow our leg muscles using 2 dumbells this exercise increase the strength of legs can it is usually preffered by athletes to increase the efficiency of their legs.</string>
</resources>