<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#EFDFD8">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:padding="10dp"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="147dp"
                        android:layout_height="120dp"
                        android:src="@drawable/pic1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/first_exe"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <ImageView
                        android:layout_width="149dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/pic2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/second_exe"
                        android:textColor="@color/black"
                        android:textSize="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <ImageView
                        android:layout_width="149dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/pic3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/third_exe"
                        android:textColor="@color/black"
                        android:textSize="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <ImageView
                        android:layout_width="152dp"
                        android:layout_height="122dp"
                        android:src="@drawable/pic4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forth_exe"
                        android:textColor="@color/black"
                        android:textSize="20dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <ImageView
                        android:layout_width="152dp"
                        android:layout_height="122dp"
                        android:src="@drawable/pic5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fifth_exe"
                        android:textColor="@color/black"
                        android:textSize="20dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <ImageView
                        android:layout_width="152dp"
                        android:layout_height="122dp"
                        android:src="@drawable/pic6" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sixth_exe"
                        android:textColor="@color/black"
                        android:textSize="20dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <ImageView
                        android:layout_width="152dp"
                        android:layout_height="122dp"
                        android:src="@drawable/pic7" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seventh_exe"
                        android:textColor="@color/black"
                        android:textSize="20dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <ImageView
                        android:layout_width="152dp"
                        android:layout_height="122dp"
                        android:src="@drawable/pic8" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eighth_exe"
                        android:textColor="@color/black"
                        android:textSize="20dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <ImageView
                        android:layout_width="152dp"
                        android:layout_height="122dp"
                        android:src="@drawable/pic9" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ninth_exe"
                        android:textColor="@color/black"
                        android:textSize="20dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <ImageView
                        android:layout_width="152dp"
                        android:layout_height="122dp"
                        android:src="@drawable/pic10" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tenth_exe"
                        android:textColor="@color/black"
                        android:textSize="20dp" />
                </LinearLayout>

            </LinearLayout>


        </ScrollView>
    </LinearLayout>
</RelativeLayout>